# rust-codechain-primitives

./: Cargo.toml
src/: hash.rs  lib.rs
