[package]
name = "primitives"
version = "0.4.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeChain-io/rust-codechain-primitives"

[dependencies]
ethereum-types = "0.4.0"
fixed-hash = "0.2"
ethereum-types-serialize = { git = "https://github.com/paritytech/primitives"}
serde = "1.0"